# OpenCuff

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  package.json  pyproject.toml  settings.yml
.claude/agents/: design-reviewer.md  python-code-reviewer.md  python-oss-architect.md  python-tdd-implementer.md
docker/: Dockerfile
docs/: bash-recorder-hld.md  cli-hld.md  docker.md  dynamic-tool-registration-hld.md  makefile-plugin-hld.md  packagejson-plugin-hld.md  plugin-system-hld.md  scripts-plugin-hld.md
examples/: README.md  claude-code-mcp-config.json  settings.yml
scripts/: hello.sh
src/opencuff/: __init__.py  server.py
src/opencuff/cli/: __init__.py  discovery.py  main.py
src/opencuff/cli/commands/: __init__.py  doctor.py  init.py  run.py  status.py  version.py
src/opencuff/plugins/: __init__.py  barrier.py  base.py  config.py  discovery_registry.py  errors.py  fastmcp_bridge.py  manager.py  registry.py  watcher.py
src/opencuff/plugins/adapters/: __init__.py  in_source.py
src/opencuff/plugins/builtin/: __init__.py  bash_recorder.py  dummy.py  makefile.py  packagejson.py  scripts.py
tests/: test_bash_recorder.py  test_cli.py  test_config_watcher.py  test_discovery.py  test_dummy_plugin.py  test_fastmcp_bridge.py  test_in_source_adapter.py  test_integration.py  test_makefile_discovery.py  test_makefile_plugin.py  test_packagejson_discovery.py  test_packagejson_plugin.py  test_plugin_base.py  test_plugin_config.py  test_plugin_manager.py  test_plugin_registry.py  test_request_barrier.py  test_sanity.py  test_scripts_plugin.py  test_startup.py
tests/fixtures/makefiles/: common.mk  complex.mk  empty.mk  simple.mk  with_descriptions.mk  with_includes.mk  with_patterns.mk  with_variables.mk
tests/fixtures/package_json/complex/: package.json
tests/fixtures/package_json/simple/: package.json
tests/fixtures/package_json/with_lifecycle/: package.json
tests/fixtures/package_json/with_npm/: package-lock.json  package.json
tests/fixtures/package_json/with_pnpm/: package.json
tests/fixtures/scripts/binary/: binary_file
tests/fixtures/scripts/nested/tools/: db-migrate.py  deploy.sh
tests/fixtures/scripts/no_shebang/: no_shebang_script.sh
tests/fixtures/scripts/scripts/: build.sh  test.sh
tests/fixtures/scripts/sensitive/: deploy_secrets.sh
tests/fixtures/scripts/simple/: build.sh  test.sh
tests/fixtures/scripts/with_descriptions/: documented.sh
tests/fixtures/scripts/with_shebang/: bash_script.bash  env_bash.sh  python_script.py
